# robust_fast_navigation

./: .clang_format  .gitignore  CMakeLists.txt  README.md  Singularityfile.def  entrypoint.sh  package.xml
cmake/: FindGUROBI.cmake
include/faster/: faster_types.hpp  solver.hpp  solver_utils.hpp  termcolor.hpp
include/gcopter/: firi.hpp  flatness_unicycle.hpp  gcopter.hpp  geo_utils.hpp  trajectory.hpp
include/robust_fast_navigation/: JPS.h  JPS3D.h  contour_solver.h  contour_wrapper.h  corridor.h  faster_wrapper.h  gcopter_wrapper.h  grid_map_util.h  gurobi_solver.h  map_util.h  motion_primitives.h  ph_demo.h  plan_through_map.h  planar_ph.h  planner.h  planner_core.h  planner_gurobi.h  rfn_types.h  solver_base.h  solver_utils.h  spline.h  tinycolormap.hpp  utils.h
launch/: esdf.launch  gmapping.launch  laser_filter.launch  navigation_stack.launch  plan_through_map.launch  planner.launch  planner_gurobi.launch  planner_uav.launch  pointcloud_to_laser.launch  record_bag.launch  teleop.launch
msg/: Polytope.msg  SolverState.msg  SolverStateArray.msg
params/: costmap_common_params.yaml  global_costmap_params.yaml  lidar_filter.yaml  local_costmap_params.yaml  local_costmap_params_uav.yaml  planner.yaml  planner_uav.yaml  robo_params.yaml  uav_params.yaml
rviz/: brs.rviz  jackal.rviz  planner.rviz  planner3d.rviz  primitives.rviz  spot.rviz
scripts/: OcclusionManager.py  Occlusions.py  bag2pkl.py  corridor_viz.py  gazebo_simulation.py  getGPS.py  getGmappingPose.py  ipopt_install.sh  motion_primitives_recover.py  plotPlane.py  plotTrajectories.py  plot_trajectory.py  potential_field.py  report_test.py  run.py  run_inference.py  run_inference_gp.py  run_inference_regressions.py  run_sims.py  run_sims_speed.py  test.sh  test_basis.py  test_speed.sh  trail_viz.py
src/: BRSManager.cpp  JPS.cpp  JPS3D.cpp  JPS_test.cpp  contour_solver.cpp  contour_wrapper.cpp  dummyPlanner.cpp  faster_wrapper.cpp  gcopter_wrapper.cpp  gurobi_solver.cpp  minvo_basis.cpp  motion_primitives.cpp  ph_demo.cpp  plan_through_map.cpp  planar_ph.cpp  planner.cpp  planner_core.cpp  planner_gurobi.cpp  planner_gurobi_node.cpp  planner_node.cpp  publish_pf_pose.cpp  py_planner.cpp  rfn_types.cpp  safety_node.cpp  solve_from_state_server.cpp  solver.cpp
srv/: SolveFromState.srv
